[package]
name = "codecrafters-redis"
version = "0.1.0"
edition = "2021"
authors = ["Codecrafters <hello@codecrafters.io>"]

[dependencies]
# Async runtime and utilities
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3" # <-- ADD THIS LINE

# Efficient buffer management, crucial for zero-copy parsing
bytes = "1.3.0"

# Command-line interface parsing
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0.59"    # For flexible error handling in the app/binary
thiserror = "1.0.32" # For creating specific error types in the foundation library

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# High-performance protocol parsing
nom = "7.1"

# Data serialization/deserialization for RDB persistence
serde = { version = "1.0", features = ["derive"] }

# For ergonomic enum-string conversion
strum = "0.24"
strum_macros = "0.24"

# High performance HashMap
dashmap = "5.5"